syntax = "proto3";
package empowerchain.plasticcredit;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "empowerchain/plasticcredit/params.proto";

option go_package = "github.com/empowerchain/empowerchain/x/plasticcredit/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/empowerchain/empowerchain/plasticcredit/params";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}