syntax = "proto3";
package empowerchain.empowerchain.proofofexistence;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "empowerchain/proofofexistence/proof.proto";

option go_package = "github.com/empowerchain/empowerchain/x/proofofexistence/types";

// Query defines the gRPC querier service.
service Query {
  // Queries a Proof by hash.
	rpc Proof(QueryGetProofRequest) returns (QueryGetProofResponse) {
		option (google.api.http).get = "/empowerchain/empowerchain/proofofexistence/proof/{hash}";
	}
}

message QueryGetProofRequest {
	  string hash = 1;

}

message QueryGetProofResponse {
	Proof proof = 1 [(gogoproto.nullable) = false];
}
